Added totalTime, avg and Sd in treeviewJumpRj Changed title of webpages (show all tests info)
svn path=/trunk/; revision=231

--- a/web/html_created_no_edit/print/index_es.html
+++ b/web/html_created_no_edit/print/index_es.html
@@ -6,7 +6,7 @@
 
 			  <head>
 			  	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>ChronoJump - software libre para cronometrado del salto</title>
+		<title>ChronoJump - software libre para cronometrado del salto, carrera, tiempo de reacci&oacute;n y ritmo</title>
 		<style type="text/css">
 			@import url(style.css);
 		</style>
@@ -36,7 +36,7 @@ Introducci&oacute;n
 	</td></tr>
 
 	<tr bgcolor="#e6e6fa"><th align="center">
-	Timpo de reacci&oacute;n
+	Tiempo de reacci&oacute;n
 	</th><th align="center">
 	Ritmos (pulsaci&oacute;n)
 	</th></tr>
