changed to gtk-sharp-2.0 and glade-sharp-2.0 -changing the selected method on treeviews (see gui/session load) NPlot updated to 0.9.9.2
Added Agility tests: 423350
Showing little image of every test 423352 (only for agility now)
DialogImageTest works getting the eventType name and image
added 5 agility tests: (20Yard, 505, Illinois, Shuttle-Run & ZigZag) with its images
added rocket jump
added sqlite/event.cs with graph stuff
added "mini" images dir and files
added eventType.cs, reactionTimeType.cs

edit run shows speed in correct units
Fixed bug: 433444: Constants created before Catalog: "All jumps" was no localized

svn path=/trunk/; revision=244

--- a/web/html_created_no_edit/print/installation_es.html
+++ b/web/html_created_no_edit/print/installation_es.html
@@ -23,7 +23,8 @@ Instalaci&oacute;n
 	<table width="100%" border="0" cellspacing="2" cellpadding="2">
 	<tr bgcolor="#e6e6fa"><th>Sistemas operativos</th><th><center>Instrucciones para la instalaci&oacute;n</center></th></tr>
 	<tr><td><b>GNU/Linux</b></td><td>Instalar Mono, libgdiplus y Gtk#. Consultar este correo (ingl&eacute;s y castellano): <a href="http://mail.gnome.org/archives/chronojump-list/2007-March/msg00004.html">Chronojump 0.52 for Linux (New!) Installation</a></td></tr>
-	<tr><td><b>Windows</b></td><td>Consultar este correo: <a href="http://mail.gnome.org/archives/chronojump-list/2007-March/msg00003.html">Chronojump 0.52 for Windows (New!) Installation</a> (ingl&eacute;s y castellano)</td></tr>
+	<tr><td><b>Windows</b></td><td>Consultar este correo: <a href="http://mail.gnome.org/archives/chronojump-list/2007-April/msg00012.html">Chronojump 0.52 for Windows (New!) Installation (updated)</a> (ingl&eacute;s y castellano)</td></tr>
+	<tr><td><b>Maemo N770</b></td><td>Consultar este correo: <a href="http://mail.gnome.org/archives/chronojump-list/2007-April/msg00002.html">chronojump_mini for Maemo!! Chronojump_mini funcionando en Maemo!!</a> (ingl&eacute;s y castellano)</td></tr>
 	</table>
 	
 	<p><br>
