--- a/web/html_created_no_edit/print/installation_pt.html
+++ b/web/html_created_no_edit/print/installation_pt.html
@@ -23,7 +23,8 @@ Instala&ccedil;&atilde;o
 	<table width="100%" border="0" cellspacing="2" cellpadding="2">
 	<tr bgcolor="#e6e6fa"><th>Sistemas operacionales</th><th><center>Instrucciones</center></th></tr>
 	<tr><td><b>GNU/Linux</b></td><td>Instale Monol, libgdiplus e Gtk#. Ler este e-mail (em ingl&ecirc;s e espanhol): <a href="http://mail.gnome.org/archives/chronojump-list/2007-March/msg00004.html">Chronojump 0.52 for Linux (New!) Installation</a></td></tr>
-	<tr><td><b>Windows</b></td><td>Ler este e-mail (em ingl&ecirc;s e espanhol): <a href="http://mail.gnome.org/archives/chronojump-list/2007-March/msg00003.html">Chronojump 0.52 for Windows (New!) Installation</a></td></tr>
+	<tr><td><b>Windows</b></td><td>Ler este e-mail (em ingl&ecirc;s e espanhol): <a href="http://mail.gnome.org/archives/chronojump-list/2007-April/msg00012.html">Chronojump 0.52 for Windows (New!) Installation (updated)</a></td></tr>
+	<tr><td><b>Maemo N770</b></td><td>Ler este e-mail (em ingl&ecirc;s e espanhol): <a href="http://mail.gnome.org/archives/chronojump-list/2007-April/msg00002.html">chronojump_mini for Maemo!! Chronojump_mini funcionando en Maemo!!</a></td></tr>
 	</table>
 	
 	<p><br>
