--- a/web/html_created_no_edit/print/construction_es.html
+++ b/web/html_created_no_edit/print/construction_es.html
@@ -17,17 +17,31 @@
 Construcci&oacute;n
 </h4>
 
-<h5>Construcci&oacute;n-obtenci&oacute;n de cron&oacute;metro</h5>
-<ul>
-<li>Chronopic original
-  <ul>
-  <li>Para informaci&oacute;n a cerca de la <b>compra</b> del cron&oacute;metro ya fabricado, leer este email: <a href="http://mail.gnome.org/archives/chronojump-list/2005-October/msg00002.html">Adquisici&oacute;n del Prototipo I de la chronopic</a>.
-  <li><b>[Expertos]</b> Para informaci&oacute;n a cerca de la <b>fabricaci&oacute;n</b> del cron&oacute;metro, leer este e-mail: <a href="http://mail.gnome.org/archives/chronojump-list/2005-October/msg00001.html">Documentaci&oacute;n sobre Chronopic 1.0 y el Prototipo 1</a>. <a href="http://www.gnome.org/projects/chronojump/articles/chronopic_cables_es.doc">Construcci&oacute;n de cables para Chronopic</a>, y <a href="http://www.gnome.org/projects/chronojump/articles/record_chronopic_pic_icprog_es.doc">Grabaci&oacute;n de Chronopic con ICPROG</a>.
-  </ul>
-<li>Alternativamente, puede construir la <a href="construction_chronopic_juanfer_es.html">Chronopic_juanfer</a> (m&aacute;s barata y m&aacute;s f&aacute;cil de fabricar).
-</ul>
+<ol>
+<li>Compra-construcci&oacute;n de cron&oacute;metro
+<li>Construcci&oacute;n de plataforma de contactos
+<li>C&eacute;lulas fotoel&eacute;ctricas
+</ol>
 
-<h5>Construcci&oacute;n de la plataforma de contactos</h5>
+
+<h5>1.- Compra-construcci&oacute;n de cron&oacute;metro</h5>
+
+
+<table width="100%" border="0" cellspacing="2" cellpadding="2">
+<tr bgcolor="#e6e6fa"><th>Comprar Chronopic</th><th>Escribir a</th><th>Precio aproximado</th><th>Comentarios</th></tr>
+<tr><td>en Espa&ntilde;a</td><td>andres@ifara.com</td><td>70 Euros +IVA</td><td>Grabado en PCB</td></tr>
+<tr><td>en Sudam&eacute;rica</td><td>juanfer@juanfer.com.ar</td><td>150$ argentinos +env&iacute;o</td><td>Placa casera</td></tr>
+<tr><td colspan="4">Nota1: no nos hacemos responsables de que los Chronopics comprados funcionen.</td></tr>
+<tr><td colspan="4">Nota2: si desea comercializar chronopics, escriba un correo a xaviblas@gmail.com.</td></tr>
+</table>
+
+
+<p><b>Construcci&oacute;n</b> [Expertos] Para informaci&oacute;n a cerca de la <b>fabricaci&oacute;n</b> del cron&oacute;metro, leer estos correos: <a href="http://mail.gnome.org/archives/chronojump-list/2005-October/msg00001.html">Documentaci&oacute;n sobre Chronopic 1.0 y el Prototipo 1</a>. <a href="http://www.gnome.org/projects/chronojump/articles/chronopic_cables_es.doc">Construcci&oacute;n de cables para Chronopic</a>, y <a href="http://www.gnome.org/projects/chronojump/articles/record_chronopic_pic_icprog_es.doc">Grabaci&oacute;n de Chronopic con ICPROG</a>.
+ <br>  
+ Alternativamente, puede construir la <a href="construction_chronopic_juanfer_es.html">Chronopic_juanfer</a> (m&aacute;s barata y m&aacute;s f&aacute;cil de fabricar).
+
+
+<h5>2.- Construcci&oacute;n de la plataforma de contactos</h5>
 
 El instrumento que permite saber si el sujeto est&aacute; en el aire o en el suelo puede ser una plataforma de contactos o un sistema de c&eacute;lulas fotoel&eacute;ctricas. Se propone el siguiente documento para la fabricaci&oacute;n de la plataforma de contactos:
 
@@ -42,6 +56,9 @@ Alternativamente se ha descrito otra posibilidad de construcci&oacute;n de plata
 <ul> 
 <li><a href="http://www.deporteyciencia.com/wiki.pl?Plataforma_Contactos_Con_Tapete_Videojuego1">"Desarrollo de Prototipo de Plataforma y Programa de Computaci&oacute;n, para Evaluaci&oacute;n de Salto Vertical adaptado de Tapete de Videojuego"</a>
 </ul>
+
+<h5>3.- C&eacute;lulas fotoel&eacute;ctricas</h5>
+
  En cuanto a <b>c&eacute;lulas&nbsp;fotoel&eacute;ctricas</b>, no se ha documentado a&uacute;n sus posibilidades de uso, precio, ... si dispone de informaci&oacute;n y desea colaborar, ap&uacute;ntese a la <a href="contact_es.html">lista chronojump-devel-list</a>.
 
 </body></html>
