--- a/web/html_created_no_edit/print/installation.html
+++ b/web/html_created_no_edit/print/installation.html
@@ -24,7 +24,8 @@ Installation
 	<table width="100%" border="0" cellspacing="2" cellpadding="2">
 	<tr bgcolor="#e6e6fa"><th>Operating systems</th><th><center>Installation instructions</center></th></tr>
 	<tr><td><b>GNU/Linux</b></td><td>Install Mono, libgdiplus, and Gtk#. Read this e-mail: <a href="http://mail.gnome.org/archives/chronojump-list/2007-March/msg00004.html">Chronojump 0.52 for Linux (New!) Installation</a></td></tr>
-	<tr><td><b>Windows</b></td><td>Read this e-mail: <a href="http://mail.gnome.org/archives/chronojump-list/2007-March/msg00003.html">Chronojump 0.52 for Windows (New!) Installation</a></td></tr>
+	<tr><td><b>Windows</b></td><td>Read this e-mail: <a href="http://mail.gnome.org/archives/chronojump-list/2007-April/msg00012.html">Chronojump 0.52 for Windows (New!) Installation (updated)</a></td></tr>
+	<tr><td><b>Maemo N770</b></td><td>Read this e-mail: <a href="http://mail.gnome.org/archives/chronojump-list/2007-April/msg00002.html">chronojump_mini for Maemo!! Chronojump_mini funcionando en Maemo!!</a></td></tr>
 	</table>
 	
 	<p><br>
