--- a/web/html_created_no_edit/print/installation_gl.html
+++ b/web/html_created_no_edit/print/installation_gl.html
@@ -23,7 +23,8 @@ Instalaci&oacute;n
 	<table width="100%" border="0" cellspacing="2" cellpadding="2">
 	<tr bgcolor="#e6e6fa"><th>Sistemas operativos</th><th><center>Instruci&oacute;ns</center></th></tr>
 	<tr><td><b>GNU/Linux</b></td><td>Instalar Mono, libgdiplus e Gtk#. Consulte este correo (ingl&eacute;s, castel&aacute;n): <a href="http://mail.gnome.org/archives/chronojump-list/2007-March/msg00004.html">Chronojump 0.52 for Linux (New!) Installation</a></td></tr>
-	<tr><td><b>Windows</b></td><td>Consulte este correo: <a href="http://mail.gnome.org/archives/chronojump-list/2007-March/msg00003.html">Chronojump 0.52 for Windows (New!) Installation</a> (ingl&eacute;s, castel&aacute;n)</td></tr>
+	<tr><td><b>Windows</b></td><td>Consulte este correo: <a href="http://mail.gnome.org/archives/chronojump-list/2007-April/msg00012.html">Chronojump 0.52 for Windows (New!) Installation (updated)</a> (ingl&eacute;s, castel&aacute;n)</td></tr>
+	<tr><td><b>Maemo N770</b></td><td>Consulte este correo: <a href="http://mail.gnome.org/archives/chronojump-list/2007-April/msg00002.html">chronojump_mini for Maemo!! Chronojump_mini funcionando en Maemo!!</a> (ingl&eacute;s, castel&aacute;n)</td></tr>
 	</table>
 	
 	<p><br>
