Fixed bug on report / stats adding fixed bug on report destroy window fixed Makefile
svn path=/trunk/; revision=257

--- a/web/html_created_no_edit/faq_es.html
+++ b/web/html_created_no_edit/faq_es.html
@@ -74,7 +74,7 @@ El acero de la plataforma de contactos va a ser sometido a numerosas fuerzas, si
 
 <p><li>¿Por qu&eacute; no us&aacute;is c&eacute;lulas fotoel&eacute;ctricas?
 <p>
-Por que todav&iacute;a nadie ha colaborado en ofrecer informaci&oacute;n sobre c&oacute;mo fabricarlas, d&oacute;nde comprarlas, precios, retardo en la detecci&oacute;n de eventos... agradeceremos colaboraciones en este aspecto.
+Lea esta p&aacute;gina: <a href="photocells_es.html">Fotoc&eacute;lulas</a>.
 
 <p><li>He descubierto una manera mejor de hacer la plataforma de contactos ¿d&oacute;nde puedo anunciarla?
 <p>
@@ -169,13 +169,16 @@ Escriba a la lista de correo <a href="contact_es.html">chronojump-devel-list</a>
 				<ul>
 <li><a href="http://www.xdeblas.com">Xavier de Blas</a></li>
 <li><a href="http://www.iearobotics.com/personal/juan/">Ju&aacute;n Gonz&aacute;lez</a></li>
+<li><a href="mailto:juanfer@juanfer.com.ar">Juan Fernando Pardo</a>
 </ul>
 
 				<h3>Colaboradores</h3>
 				<ul>
 <li><a href="mailto:marchesedavid@yahoo.com.ar">David Marchese</a>
-<li><a href="mailto:juanfer@juanfer.com.ar">Juan Fernando Pardo</a>
 <li><a href="http://www.bortoleto.com/malu.htm">Maria Luisa Belloto</a>
+<li>Bernat Busc&agrave;
+<li>Josep Ma Padull&eacute;s
+<li>Alberto Garc&iacute;a-Fogeda
 </ul>
 
 				<h3>Contribuyen</h3>
