--- a/web/html_created_no_edit/print/index.html
+++ b/web/html_created_no_edit/print/index.html
@@ -13,11 +13,16 @@
 		</head>
 
 		<body id="page-main" class="with-sidebar">
-		<table width="100%" border="0" cellspacing="0" cellpadding="4"><tr bgcolor="#e6e6fa"><td align="left">Last&nbsp;Chronojump&nbsp;Version:&nbsp;<b>0.52</b>&nbsp;(March-31-2007) </td><td align="right"> ... <a href="installation.html">install!</a> </td></tr></table>
-<h4 id="top">
-Introduction
+		<h4 id="top">
+News
 </h4>
+<ul>
+  <li>Last&nbsp;Chronojump&nbsp;Version:&nbsp; <a href="installation.html"><b>0.52</b>&nbsp;(March-31-2007)</a> 
+  <li><a href="courses_es.html">1st Chronojump course on Barcelona</a> (spanish) (July 2007)
+</ul>
 
+<h4>Introduction</h4>
+	
 <h5><b>ChronoJump</b> is a complete multiplatform system for measurement, management and statistics of jump time events (contact time, flight time), and other actions. </h5>
 	<center>
 	<table border="0" cellspacing="4" cellpadding="4">
@@ -29,10 +34,10 @@ Introduction
 	</th></tr>
 
 	<tr><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_jump_300.png" width="299" height="146" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_jump_250.png" width="250" height="122" hspace="6" vspace="8">
 	<br>
 	</td><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_run_300.png" width="300" height="114" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_run_250.png" width="250" height="95" hspace="6" vspace="8">
 	<br>
 	</td></tr>
 
@@ -43,9 +48,9 @@ Introduction
 	</th></tr>
 
 	<tr><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_reaction_time_300.png" width="300" height="174" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_reaction_time_250.png" width="250" height="195" hspace="6" vspace="8">
 	</td><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_pulse_300.png" width="301" height="78" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_pulse_250.png" width="250" height="65" hspace="6" vspace="8">
 	</td></tr>
 
 	</table>
