--- a/web/html_created_no_edit/print/index_ca.html
+++ b/web/html_created_no_edit/print/index_ca.html
@@ -13,10 +13,16 @@
 		</head>
 
 		<body id="page-main" class="with-sidebar">
-		<table width="100%" border="0" cellspacing="0" cellpadding="4"><tr bgcolor="#e6e6fa"><td align="left">Darrera&nbsp;versi&oacute;&nbsp;de&nbsp;Chronojump:&nbsp;<b>0.52</b>&nbsp;(31-Mar&ccedil;-2007) </td><td align="right"> ... <a href="installation_ca.html">instal.la!</a> </td></tr></table><br>
-<h4 id="top">
-Introducci&oacute;
+		<h4 id="top">
+Darreres not&iacute;cies
 </h4>
+<ul>
+  <li>Darrera&nbsp;versi&oacute;&nbsp;de&nbsp;Chronojump:&nbsp; <a href="installation_ca.html"><b>0.52</b>&nbsp;(31-Mar&ccedil;-2007)</a> 
+  <li><a href="courses_ca.html">1er Curs de Chronojump a Barcelona</a> (Juliol 2007) 
+</ul>
+
+
+<h4>Introducci&oacute;</h4>
 
 	<h5><b>El ChronoJump</b> &eacute;s un complet sistema multiplataforma per a la mesura, la gesti&oacute; i l'estad&iacute;stica de les fases temporals del salt i d'altres accions.</h5>
 	<center>
@@ -29,10 +35,10 @@ Introducci&oacute;
 	</th></tr>
 
 	<tr><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_jump_300.png" width="299" height="146" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_jump_250.png" width="250" height="122" hspace="6" vspace="8">
 	<br>
 	</td><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_run_300.png" width="300" height="114" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_run_250.png" width="250" height="95" hspace="6" vspace="8">
 	<br>
 	</td></tr>
 
@@ -43,9 +49,9 @@ Introducci&oacute;
 	</th></tr>
 
 	<tr><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_reaction_time_300.png" width="300" height="174" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_reaction_time_250.png" width="250" height="195" hspace="6" vspace="8">
 	</td><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_pulse_300.png" width="301" height="78" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_pulse_250.png" width="250" height="65" hspace="6" vspace="8">
 	</td></tr>
 
 	</table>
