--- a/web/html_created_no_edit/print/index_fr.html
+++ b/web/html_created_no_edit/print/index_fr.html
@@ -13,10 +13,16 @@
 		</head>
 
 		<body id="page-main" class="with-sidebar">
-		<table width="100%" border="0" cellspacing="0" cellpadding="4"><tr bgcolor="#e6e6fa"><td align="left">Derni&egrave;re&nbsp;version&nbsp;de&nbsp;de&nbsp;Chronojump:&nbsp;<b>0.52</b>&nbsp;(31-Mars-2007) </td><td align="right"> ... <a href="installation.html">installent (an)</a> </td></tr></table>
-<h4 id="top">
-Introduction
+		<h4 id="top">
+News
 </h4>
+<ul>
+  <li>Derni&egrave;re&nbsp;version&nbsp;de&nbsp;Chronojump:&nbsp; <a href="installation_fr.html"><b>0.52</b>&nbsp;(31-Mars-2007)</a> 
+  <li><a href="courses_es.html">1st Chronojump course on Barcelona</a> (spanish) (Juilliet 2007)
+</ul>
+
+
+<h4>Introduction</h4>
 
 <h5><b>ChronoJump</b> est un syst&egrave;me complet pour la mesure, la gestion et les statistiques des &eacute;v&eacute;nements de saut et d'autres actions</h5>
 	<center>
@@ -29,10 +35,10 @@ Introduction
 	</th></tr>
 
 	<tr><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_jump_300.png" width="299" height="146" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_jump_250.png" width="250" height="122" hspace="6" vspace="8">
 	<br>
 	</td><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_run_300.png" width="300" height="114" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_run_250.png" width="250" height="95" hspace="6" vspace="8">
 	<br>
 	</td></tr>
 
@@ -43,9 +49,9 @@ Introduction
 	</th></tr>
 
 	<tr><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_reaction_time_300.png" width="300" height="174" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_reaction_time_250.png" width="250" height="195" hspace="6" vspace="8">
 	</td><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_pulse_300.png" width="301" height="78" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_pulse_250.png" width="250" height="65" hspace="6" vspace="8">
 	</td></tr>
 
 	</table>
