--- a/web/html_created_no_edit/print/index_gl.html
+++ b/web/html_created_no_edit/print/index_gl.html
@@ -13,10 +13,15 @@
 		</head>
 
 		<body id="page-main" class="with-sidebar">
-		<table width="100%" border="0" cellspacing="0" cellpadding="4"><tr bgcolor="#e6e6fa"><td align="left">&Uacute;ltima&nbsp;versi&oacute;n&nbsp;de&nbsp;Chronojump:&nbsp;<b>0.52</b>&nbsp;(31-Marzo-2007) </td><td align="right"> ... <a href="installation_gl.html">instalar</a> </td></tr></table>
-<h4 id="top">
-Introduci&oacute;n
+		<h4 id="top">
+&Uacute;ltimas noticias
 </h4>
+<ul>
+  <li>&Uacute;ltima&nbsp;versi&oacute;n&nbsp;de&nbsp;Chronojump:&nbsp; <a href="installation_gl.html"><b>0.52</b>&nbsp;(31-Marzo-2007)</a> 
+  <li><a href="courses_es.html">1er Curso de Chronojump en Barcelona</a> (en castel&aacute;n) (julio 2007) 
+</ul>
+
+<h4>Introduci&oacute;n</h4>
 	
 	<h5><b>ChronoJump</b> &eacute; un completo sistema multiplataforma para a medici&oacute;n, xesti&oacute;n e estat&iacute;stica das fases temporais do salto e outras acci&oacute;ns.</h5>
 	<center>
@@ -29,10 +34,10 @@ Introduci&oacute;n
 	</th></tr>
 
 	<tr><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_jump_300.png" width="299" height="146" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_jump_250.png" width="250" height="122" hspace="6" vspace="8">
 	<br>
 	</td><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_run_300.png" width="300" height="114" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_run_250.png" width="250" height="95" hspace="6" vspace="8">
 	<br>
 	</td></tr>
 
@@ -43,9 +48,9 @@ Introduci&oacute;n
 	</th></tr>
 
 	<tr><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_reaction_time_300.png" width="300" height="174" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_reaction_time_250.png" width="250" height="195" hspace="6" vspace="8">
 	</td><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_pulse_300.png" width="301" height="78" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_pulse_250.png" width="250" height="65" hspace="6" vspace="8">
 	</td></tr>
 
 	</table>
