--- a/web/html_created_no_edit/print/index_pt.html
+++ b/web/html_created_no_edit/print/index_pt.html
@@ -13,10 +13,15 @@
 		</head>
 
 		<body id="page-main" class="with-sidebar">
-		<table width="100%" border="0" cellspacing="0" cellpadding="4"><tr bgcolor="#e6e6fa"><td align="left">&Uacute;ltima&nbsp;vers&atilde;o&nbsp;de&nbsp;Chronojump:&nbsp;<b>0.52</b>&nbsp;(31-mar&ccedil;o-2007) </td><td align="right"> ... <a href="installation_pt.html">instala</a> </td></tr></table>
-<h4 id="top">
-Introdu&ccedil;&atilde;o
+		<h4 id="top">
+&Uacute;ltimas noticias
 </h4>
+<ul>
+  <li>&Uacute;ltima&nbsp;vers&atilde;o&nbsp;de&nbsp;Chronojump:&nbsp; <a href="installation_pt.html"><b>0.52</b>&nbsp;(31-mar&ccedil;o-2007)</a> 
+  <li><a href="courses_es.html">1er Curso de Chronojump en Barcelona</a> (em espanhol) (Julho 2007) 
+</ul>
+
+<h4>Introdu&ccedil;&atilde;o</h4>
 
 	<h5><b>ChronoJump</b> &eacute; um sistema completo multiplataforma para medir, compara&ccedil;&atilde;o e estat&iacute;stica das fases temporais do salto.</h5>
 	<center>
@@ -29,10 +34,10 @@ Introdu&ccedil;&atilde;o
 	</th></tr>
 
 	<tr><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_jump_300.png" width="299" height="146" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_jump_250.png" width="250" height="122" hspace="6" vspace="8">
 	<br>
 	</td><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_run_300.png" width="300" height="114" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_run_250.png" width="250" height="95" hspace="6" vspace="8">
 	<br>
 	</td></tr>
 
@@ -43,9 +48,9 @@ Introdu&ccedil;&atilde;o
 	</th></tr>
 
 	<tr><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_reaction_time_300.png" width="300" height="174" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_reaction_time_250.png" width="250" height="195" hspace="6" vspace="8">
 	</td><td align="center">
-	<img src="http://www.gnome.org/projects/chronojump/images/chronojump_esquema_pulse_300.png" width="301" height="78" hspace="6" vspace="8">
+	<img src="http://www.gnome.org/projects/chronojump/chronojump_esquema_pulse_250.png" width="250" height="65" hspace="6" vspace="8">
 	</td></tr>
 
 	</table>
