added juanfer as author in about
svn path=/trunk/; revision=258

--- a/web/html_created_no_edit/print/construction_ca.html
+++ b/web/html_created_no_edit/print/construction_ca.html
@@ -25,6 +25,25 @@ Construcci&oacute;
 
 <h5>1.- Compra-Construcci&oacute; del cron&ograve;metre</h5>
 
+Chronopic 2.0 En preparaci&oacute;
+
+<table width="100%" border="0" cellspacing="2" cellpadding="2">
+<tr bgcolor="#e6e6fa"><th>USB - frontal</th><th>USB - darrere</th></tr>
+<tr>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_usb_front.jpg"><img src="chronopic_2_0_usb_front_mini.jpg"></a></td>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_usb_back.jpg"><img src="chronopic_2_0_usb_back_mini.jpg"></a></td>
+</tr>
+<tr bgcolor="#e6e6fa"><th>S&egrave;rie - frontal</th><th>S&egrave;rie - darrere</th></tr>
+<tr>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_serial_front.jpg"><img src="chronopic_2_0_serial_front_mini.jpg"></a></td>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_serial_back.jpg"><img src="chronopic_2_0_serial_back_mini.jpg"></a></td>
+</tr>
+</table>
+
+<p><br>
+<table bgcolor="#999999" width="100%"><tr><td>
+<b>Vell Chronopic 1.0</b>
+
 <table width="100%" border="0" cellspacing="2" cellpadding="2">
 <tr bgcolor="#e6e6fa"><th>Comprar Chronopic</th><th>Escriure a</th><th>Preu aproximat</th><th>Comentaris</th></tr>
 <tr><td>a Espanya</td><td>andres@ifara.com</td><td>70 Euros +IVA</td><td>Gravat en PCB</td></tr>
@@ -37,6 +56,8 @@ Construcci&oacute;
 <p><b>Construcci&oacute;</b> [Experts] Per a informaci&oacute; al voltant de la <b>fabricaci&oacute;</b> del cron&ograve;metre llegir aquest correu: <a href="http://mail.gnome.org/archives/chronojump-list/2005-October/msg00001.html">Documentaci&oacute;n sobre Chronopic 1.0 y el Prototipo 1</a> (castell&agrave;). <a href="http://www.gnome.org/projects/chronojump/articles/chronopic_cables_es.doc">Construcci&oacute; de cables per a Chronopic</a> (castell&agrave;). <a href="http://www.gnome.org/projects/chronojump/articles/record_chronopic_pic_icprog_es.doc">Enregistrament de Chronopic amb ICPROG</a> (castell&agrave;).
 <br>
 Alternativament, pot construir la <a href="construction_chronopic_juanfer_es.html">Chronopic_juanfer</a> (castell&agrave;) (m&eacute;s barata i m&eacute;s f&agrave;cil de fabricar).
+
+</td></tr></table>
 
 
 <h5>2.- Construcci&oacute; de la plataforma de contactes</h5>
