--- a/web/html_created_no_edit/print/construction_es.html
+++ b/web/html_created_no_edit/print/construction_es.html
@@ -26,6 +26,26 @@ Construcci&oacute;n
 
 <h5>1.- Compra-construcci&oacute;n de cron&oacute;metro</h5>
 
+Chronopic 2.0 En preparaci&oacute;n
+
+<table width="100%" border="0" cellspacing="2" cellpadding="2">
+<tr bgcolor="#e6e6fa"><th>USB - frontal</th><th>USB - detr&aacute;s</th></tr>
+<tr>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_usb_front.jpg"><img src="chronopic_2_0_usb_front_mini.jpg"></a></td>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_usb_back.jpg"><img src="chronopic_2_0_usb_back_mini.jpg"></a></td>
+</tr>
+<tr bgcolor="#e6e6fa"><th>Serie - frontal</th><th>Serie - detr&aacute;s</th></tr>
+<tr>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_serial_front.jpg"><img src="chronopic_2_0_serial_front_mini.jpg"></a></td>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_serial_back.jpg"><img src="chronopic_2_0_serial_back_mini.jpg"></a></td>
+</tr>
+</table>
+
+<p><br>
+<table bgcolor="#999999" width="100%"><tr><td>
+<b>Viejo Chronopic 1.0</b>
+
+<table width="100%" border="0" cellspacing="2" cellpadding="2">
 
 <table width="100%" border="0" cellspacing="2" cellpadding="2">
 <tr bgcolor="#e6e6fa"><th>Comprar Chronopic</th><th>Escribir a</th><th>Precio aproximado</th><th>Comentarios</th></tr>
@@ -40,6 +60,7 @@ Construcci&oacute;n
  <br>  
  Alternativamente, puede construir la <a href="construction_chronopic_juanfer_es.html">Chronopic_juanfer</a> (m&aacute;s barata y m&aacute;s f&aacute;cil de fabricar).
 
+</td></tr></table>
 
 <h5>2.- Construcci&oacute;n de la plataforma de contactos</h5>
 
