--- a/web/html_created_no_edit/print/construction_gl.html
+++ b/web/html_created_no_edit/print/construction_gl.html
@@ -25,6 +25,25 @@ Construci&oacute;n
 
 <h5>1.- Compra-Construci&oacute;n do cron&oacute;metro</h5>
 
+Chronopic 2.0 En preparaci&oacute;n
+
+<table width="100%" border="0" cellspacing="2" cellpadding="2">
+<tr bgcolor="#e6e6fa"><th>USB - frontal</th><th>USB - detr&aacute;s</th></tr>
+<tr>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_usb_front.jpg"><img src="chronopic_2_0_usb_front_mini.jpg"></a></td>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_usb_back.jpg"><img src="chronopic_2_0_usb_back_mini.jpg"></a></td>
+</tr>
+<tr bgcolor="#e6e6fa"><th>Serie - frontal</th><th>Serie - detr&aacute;s</th></tr>
+<tr>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_serial_front.jpg"><img src="chronopic_2_0_serial_front_mini.jpg"></a></td>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_serial_back.jpg"><img src="chronopic_2_0_serial_back_mini.jpg"></a></td>
+</tr>
+</table>
+
+<p><br>
+<table bgcolor="#999999" width="100%"><tr><td>
+<b>Velho Chronopic 1.0</b>
+
 <table width="100%" border="0" cellspacing="2" cellpadding="2">
 <tr bgcolor="#e6e6fa"><th>Para mercar a Chronopic</th><th>Escribirlle a</th><th>Prezo aproximado</th><th>Comentarios</th></tr>
 <tr><td>en Espa&ntilde;a</td><td>andres@ifara.com</td><td>70 Euros +IVE</td><td>Gravada en PCB</td></tr>
@@ -37,6 +56,7 @@ Construci&oacute;n
   <br>
 Consulte tam&eacute;n <a href="construction_chronopic_juanfer_gl.html">Chronopic_juanfer</a> (m&aacute;is barata e m&aacute;is sinxela de constru&iacute;r).
 
+</td></tr></table>
 
 
 <h5>2.- Construci&oacute;n da plataforma de contactos</h5>
