--- a/web/html_created_no_edit/print/construction.html
+++ b/web/html_created_no_edit/print/construction.html
@@ -26,6 +26,26 @@ Construction
 
 <h5>1.- Buying or Constructing the chronometer</h5>
 
+Chronopic 2.0 coming soon
+
+<table width="100%" border="0" cellspacing="2" cellpadding="2">
+<tr bgcolor="#e6e6fa"><th>USB - front</th><th>USB - back</th></tr>
+<tr>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_usb_front.jpg"><img src="chronopic_2_0_usb_front_mini.jpg"></a></td>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_usb_back.jpg"><img src="chronopic_2_0_usb_back_mini.jpg"></a></td>
+</tr>
+<tr bgcolor="#e6e6fa"><th>Serial - front</th><th>Serial - back</th></tr>
+<tr>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_serial_front.jpg"><img src="chronopic_2_0_serial_front_mini.jpg"></a></td>
+<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_serial_back.jpg"><img src="chronopic_2_0_serial_back_mini.jpg"></a></td>
+</tr>
+</table>
+
+<p><br>
+<table bgcolor="#999999" width="100%"><tr><td>
+<b>Old Chronopic 1.0</b>
+
+<table width="100%" border="0" cellspacing="2" cellpadding="2">
 
 <table width="100%" border="0" cellspacing="2" cellpadding="2">
 <tr bgcolor="#e6e6fa"><th>Buy Chronopic</th><th>Write to</th><th>Price aproximated</th><th>Comments</th></tr>
@@ -39,6 +59,7 @@ Construction
 <br>
 Check also the <a href="construction_chronopic_juanfer.html">Chronopic_juanfer</a> (cheaper, easier to build).
 
+</td></tr></table>
 
 <h5>2.- Construction of the contact platform</h5>
 The instrument that allows us to know if the subject is in the air or in the ground can be a platform of contacts or a system of photoelectric cells. We propose the following document for the manufacturing of the contact platform:
