updated fr, oc, ca removed cursor_changed references on glade lots of
updated fr, oc, ca
removed cursor_changed references on glade
lots of changes on website

svn path=/trunk/; revision=335

--- a/web/html_created_no_edit/faq_es.html
+++ b/web/html_created_no_edit/faq_es.html
@@ -15,14 +15,14 @@
 		<body id="page-main" class="with-sidebar">
 		<table width="100%" border="0" cellspacing="0" cellpadding="0">
 		<tr><td align="left">
-		<div align="left"><img src="images/chronojump33.png" alt="logo" width="591" height="177" border="0">
+		<div align="left"><a href="index.html" border="0"><img src="images/chronojump33.png" alt="logo" width="591" height="177" border="0"></a><br>
 		</div>
 		</td><td valign="bottom" align="right">
 		<div id="sidebar">
 <ul>
 <li><a href="faq_ca.html">Catal&agrave;</a></li>
 <li>Deutsch (pending)</li>
-<li><a href="faq.html">English</a></li>
+<li><a href="faq_en.html">English</a></li>
 <li id="currentLanguage">Espa&ntilde;ol</li>
 <li>Fran&ccedil;ais (pending)</li>
 <li><a href="faq_gl.html">Galego</a></li>
@@ -161,6 +161,10 @@ Escriba a la lista de correo <a href="contact_es.html">chronojump-devel-list</a>
 </div></div>
 </td><td>
 <div id="sidebar">
+				<h3>Premio</h3>
+				<p><img src="images/tropheesdulibre.jpg"><br>
+				Chronojump gana <a href="http://tropheesdulibre.org">premio de software libre 2007</a> en la categor&iacute;a de educaci&oacute;n.
+				</p>
 				<h3>Licencia</h3>
 				<p>
 					ChronoJump es <a href="http://es.wikipedia.org/wiki/Software_Libre">software&nbsp;libre</a> distribuido bajo la Licencia <a href="http://es.wikipedia.org/wiki/GPL">GPL</a>. El <em>c&oacute;digo fuente</em> <a href="http://svn.gnome.org/viewcvs/chronojump/trunk/">del&nbsp;programa y del&nbsp;cron&oacute;metro</a> puede ser consultado, as&iacute; como modificado y redistribuido.<br><br>
