--- a/web/html_created_no_edit/photocells_es.html
+++ b/web/html_created_no_edit/photocells_es.html
@@ -15,7 +15,7 @@
 		<body id="page-main" class="with-sidebar">
 		<table width="100%" border="0" cellspacing="0" cellpadding="0">
 		<tr><td align="left">
-		<div align="left"><img src="images/chronojump33.png" alt="logo" width="591" height="177" border="0">
+		<div align="left"><a href="index.html" border="0"><img src="images/chronojump33.png" alt="logo" width="591" height="177" border="0"></a><br>
 		</div>
 		</td><td valign="bottom" align="right">
 		<div id="sidebar">
@@ -52,8 +52,101 @@ Fotoc&eacute;lulas
 </h4></td><td align="right"><a href="print/photocells_es.html"><font size="2"><tt>Versi&oacute;n imprimible
 </tt></font></a></td></tr></table>
 
-Esquema de barreras infrarojas: <a href="http://www.gnome.org/projects/chronojump/barreras-sch-color.pdf">Barreras Infrarojas Chronojump</a>.
-<p><br>
+<ol>
+<li>Creaci&oacute;n de una barrera de infrarrojos
+<li>Fotoc&eacute;lulas disponibles en el mercado
+<li>Aportar informaci&oacute;n
+</ol>
+
+<h5>1.- Creaci&oacute;n de una barrera de infrarrojos (Juan Fernando Pardo)</h5>
+
+Esquema de barreras infrarrojas: <a href="http://www.gnome.org/projects/chronojump/barreras-sch-color.pdf">Barreras Infrarojas Chronojump</a>.
+<br><br>
+
+Lista de materiales para el emisor:
+<ul>
+<li>D1 led infrarrojo
+<li>C1 condensador 10nF (102)
+<li>C2 condensador 10uF (106)
+<li>C3 condensador 0,1uF (104)
+<li>R1 resistencia 15K ohms
+<li>RV2 resistencia variable 5K ohms
+<li>R3 resistencia 47 ohms
+<li>R4 resistencia 4,7K ohms
+<li>R5 resistencia 100K ohms
+<li>Q1 transistor NPN 2N2222
+<li>U1 integrado LM555N (o similar)
+</ul>
+
+Lista de materiales para el receptor:
+<ul>
+<li>U2 1 receptor infrarrojo de electrodom&eacute;stico de 38KHz de 3 conectores
+<li>C4 Condensador 47uF
+<li>R6 Resistencia 47 Ohms
+<li>R7 Resistencia 220 Ohms
+<li>D2 led color a elecci&oacute;n
+</ul>
+
+Indicaciones:
+<ul>
+<li>Receptores infrarrojos como el utilizado, hay de muchas marcas y formas. Lo
+importante es "reconocer" bien cuales son cada una de las 3 patitas ya que
+estas cambian el orden seg&uacute;n la marca del receptor.
+<li>La resistencia variable RV2 hay que ajustarla muy despacio hasta que el
+emisor quede calibrado a 38MHz. Para ello conviene observar que el led se encienda (o usar un osciloscopio).
+Hay que ir jugando un poco con la misma para adecuar la distancia en que
+se va a usar.
+</ul>
+
+Teor&iacute;a del emisor:
+<ul>
+<li>f=1/(1,4 * R * C)
+<li>38MHz=1/ (1,4 * 18,7969 kilohms * 0,001 microfaradios)
+<li>1nF = 0,001uF
+<li>Con la resistencia fija de 15K ohms y la variable de 5K ohms regulamos para
+que quede lo m&aacute;s cercano a 18,7969K ohms.
+</ul>
+
+Funcionamiento del receptor:
+<ul>
+<li>Con el receptor que yo us&eacute;, mientras se encuentra "excitado" (que est&aacute;
+recibiendo la se&ntilde;al del emisor a 38MHz) se produce un "puente" entre los
+pines 1 y 2, poniendo el pin 1 a masa, cerrando el circuito, y enciende el
+led.
+<li>Cuando deja de recibir, queda el circuito abierto.
+</ul>
+
+Como conectar el receptor al Chronopic:
+<ul>
+<li>Si se pretende conectar el receptor al Chronopic (seguramente es lo que van a hacer los que quieran usar Chronojump)
+, hay que cambiar unas cosas en las conexiones:
+<ul>
+<li>No se necesitar&aacute; el led D2 y la resistencia R7.
+<li>El pin 1 del receptor deber&aacute; conectarse a una de los conectores de la manta del
+Chronopic, NO A CUALQUIERA, sino que al que va al pin 25 del PIC (el pin 2
+de la bornera seg&uacute;n mi plano).
+<li>El pin 2 del receptor se conectar&aacute; al otro pin de la bornera del Chronopic,
+el que est&aacute; a masa (pin 1 de la bornera seg&uacute;n mi plano).
+</ul>
+<li>Estos pines son v&aacute;lidos para el receptor concreto que se ha usado, repito que cambian los
+pines entre cada marca o modelo. Si se usa otro, habr&aacute; que reconocer los pines. Al momento de escritura de estas l&iacute;neas, se desconoce como identificar los pines en otro modelo de receptor, el m&eacute;todo usado para reconocerlos en &eacute;ste fue el ensayo-error, habiendo quemado un receptor.
+</ul>
+
+Recomendaciones finales:
+<ul>
+<li>Si se desea construir esta barrerra, se recomienda hacerla primero con
+el led, como en el plano que se adjunta mand&eacute; para asegurarse que todo funcione.
+Despu&eacute;s extraer el led y la resistencia y trat&aacute;r de conectarla al Chronopic.
+<li>El tama&ntilde;o de las plaquetitas es muy peque&ntilde;o. El receptor tendr&aacute; 1,5 cm x
+3cm, y el emisor, 2cm x 4cm. Ambos necesitan alimentaci&oacute;n de 5VCC.
+<li>El precio es muy econ&oacute;mico, realmente econ&oacute;mico, ya que todos los componentes son est&aacute;ndares y baratos.
+</ul>
+
+Agradecimientos a Juan Fernando Pardo por su aportaci&oacute;n en este apartado.
+
+
+<h5>2.- Fotoc&eacute;lulas disponibles en el mercado (Josep Ma Padull&eacute;s)</h5>
+
 
 <table width="100%" border="0" cellspacing="2" cellpadding="2">
 <tr bgcolor="#e6e6fa"><th>Tipo</th><th>Fabricantes</th><th>Precio aproximado</th><th>Comentarios</th></tr>
@@ -63,16 +156,19 @@ Esquema de barreras infrarojas: <a href="http://www.gnome.org/projects/chronojum
 <tr valign="top"><td>&nbsp;</td><td colspan="3">Entre las profesionales cabe diferenciar entre las que tienen salida por rel&eacute; y las que tienen salida por transistor. Por rel&eacute; es m&aacute;s cara, tiene 30-50ms de retardo, y no es necesario un circuito para captar datos. Por transistor es m&aacute;s barata, con 10-12ms de retardo, y requiere circuito para captar datos.</td></tr>
 </table>
 
-<br><br>
-
-Este apartado requiere de su colaboraci&oacute;n, si quiere a&ntilde;adir o modificar cualquier informaci&oacute;n, escriba <a href="contact_es.html">a la lista de desarrolladores: chronojump-devel</a>, o escriba un correo a xavi@xdeblas.com
-
-<br><br>
-
 Agradecimientos a JMa Padull&eacute;s por su aportaci&oacute;n en este apartado.
+
+<h5>3.- Aportar informaci&oacute;n</h5>
+
+Este apartado requiere de su colaboraci&oacute;n, si quiere a&ntilde;adir o modificar cualquier informaci&oacute;n, escriba <a href="contact_es.html">a la lista de desarrolladores: chronojump-devel</a>, o escriba un correo a xaviblas@gmail.com
+
 </div></div>
 </td><td>
 <div id="sidebar">
+				<h3>Premio</h3>
+				<p><img src="images/tropheesdulibre.jpg"><br>
+				Chronojump gana <a href="http://tropheesdulibre.org">premio de software libre 2007</a> en la categor&iacute;a de educaci&oacute;n.
+				</p>
 				<h3>Licencia</h3>
 				<p>
 					ChronoJump es <a href="http://es.wikipedia.org/wiki/Software_Libre">software&nbsp;libre</a> distribuido bajo la Licencia <a href="http://es.wikipedia.org/wiki/GPL">GPL</a>. El <em>c&oacute;digo fuente</em> <a href="http://svn.gnome.org/viewcvs/chronojump/trunk/">del&nbsp;programa y del&nbsp;cron&oacute;metro</a> puede ser consultado, as&iacute; como modificado y redistribuido.<br><br>
